Update RecipeList to use the new cached/disabled recipes